--- a/pmf_2/Web.config
+++ b/pmf_2/Web.config
@@ -9,13 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-pmf_2-20161217111223.mdf;Initial Catalog=aspnet-pmf_2-20161217111223;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-27RK7E7;Initial Catalog=jrj_db;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-pmf_2-20161217111223.mdf;Initial Catalog=aspnet-pmf_2-20161217111223;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="jrj_dbEntities" connectionString="metadata=res://*/Models.co_log.csdl|res://*/Models.co_log.ssdl|res://*/Models.co_log.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-27RK7E7;initial catalog=jrj_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=DESKTOP-27RK7E7\SQLEXPRESS;Initial Catalog=jrj_db;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="jrj_dbEntities" connectionString="metadata=res://*/Models.co_log.csdl|res://*/Models.co_log.ssdl|res://*/Models.co_log.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-27RK7E7\SQLEXPRESS;initial catalog=jrj_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="DefaultConnection" connectionString="data source=198.71.227.2;Initial Catalog=jrj_db;Integrated Security=False;User ID=jrj_db_user;Password=366m@n85^" providerName="System.Data.SqlClient" />
-    <add name="jrj_dbEntities" connectionString="metadata=res://*/Models.co_log.csdl|res://*/Models.co_log.ssdl|res://*/Models.co_log.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.227.2;initial catalog=jrj_db;integrated security=False;User ID=jrj_db_user;Password=366m@n85^;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
