--- a/pmf_2/Web.config
+++ b/pmf_2/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-pmf_2-20161217111223.mdf;Initial Catalog=aspnet-pmf_2-20161217111223;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-pmf_2-20161217111223.mdf;Initial Catalog=aspnet-pmf_2-20161217111223;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="data source=DESKTOP-27RK7E7;initial catalog=jrj_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="jrj_dbEntities" connectionString="metadata=res://*/Models.co_log.csdl|res://*/Models.co_log.ssdl|res://*/Models.co_log.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-27RK7E7;initial catalog=jrj_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
